--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-react-leaflet": "^2.0.12",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-apiserver": "^2.0.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
+    "leaflet": "^1.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-leaflet": "^2.6.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
